# Stanford-CS224N-Winter-2026

./: .gitignore  LICENSE  README.md
Assignments/Assignment 01/: exploring_word_vectors.ipynb
Assignments/Assignment 02/: README.md  parser_model.py  parser_transitions.py  pyproject.toml  run.py
Assignments/Assignment 02/docs/: main.typ  utils.typ
Assignments/Assignment 02/docs/sections/: optimization.typ  parsing.typ  word2vec.typ
Assignments/Assignment 02/utils/: general_utils.py  parser_utils.py
Assignments/Assignment 03/: README.md  main.py  model_solution.py  pyproject.toml  train.py  utils.py
Assignments/Assignment 03/docs/: main.typ
Assignments/Assignment 03/docs/sections/: attention.typ  coding.typ  postition.typ
Assignments/Assignment 03/tests/: helpers.py  test_student.py
Assignments/Assignment 04/: .gitignore  README.md  example_usage.py  gsm8k.py  llm_judge.py  pyproject.toml  redteam.py
Assignments/Assignment 04/client/: models.py  providers.py  query.py
Assignments/Assignment 04/docs/: main.typ  utils.typ
Assignments/Assignment 04/docs/results/: judge_results.jsonl  model_E_responses.jsonl  model_F_responses.jsonl
Assignments/Assignment 04/docs/sections/: agent.typ  claiming.typ  interaction.typ  judge.typ  standard.typ
Projects/: README.md  classifier.py  config.py  datasets.py  evaluation.py  paraphrase_detection.py  pyproject.toml  sonnet_generation.py  utils.py
Projects/modules/: attention.py
Projects/src/: classifier.py  config.py  optimizer.py  utils.py
Projects/src/models/: base_gpt.py  gpt2.py
Projects/src/modules/: attention.py  gpt2_layer.py
Projects/tests/: optimizer_test.py  paraphrase_detection.py  sanity_check.py  sonnet_generation.py
