[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "explainaboard-client>=0.1.4",
    "filelock>=3.29.0",
    "importlib-metadata>=9.0.0",
    "requests>=2.33.1",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.4",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.1",
    "ruff>=0.15.11",
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"


[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
