[project]
name = "transformer-decoder"
version = "0.1.0"
description = "Coding a decoder-only transformer from scratch"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.3",
    "einops>=0.8.2",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.7.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "jaxtyping>=0.3.9",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff]
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
